top bar added, fixed unintended overflow

--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,8 @@ body {
   background-color: var(--transparent);
 	border-radius: 10px;
    border: 4px solid var(--light);
-	padding: 20px;
-  margin-top: 20px;
+	padding-top: 10px;
+  margin-top: 60px;
   text-align: center;
 }
 #location {
@@ -39,7 +39,7 @@ body {
 }
 .detail{
   background-color: var(--light); 
-  margin: 10px;
+  margin: 0px;
   margin-bottom: 100px; 
  
 }
@@ -100,9 +100,10 @@ button.close {
   border: 4px solid var(--blue);
   border-radius: 4px;
    background-color: white;
+   margin: 0 5px;
+  font-size: 13px;
 }
 button{
- // background-color: white;
   color: var(--dark);
   padding: 10px;
   margin: 20px;
@@ -116,7 +117,7 @@ button:hover{
 
 /*  navbar */
 .navbar {
-	background-color:var(--dark);
+	background-color:var(--light);
   text-align: center;
 }
 .navbar-nav {
@@ -126,11 +127,14 @@ button:hover{
     border-width: 0px;
 }
 .navbar-brand {
-	font-weight: 100;
-	 color: #ffffff;
+    font-weight: 300;
+    color: var(--dark);
+    text-align: center;
+    float: none;
+    margin: 0px;
 }
 #myNavbar {
-  padding: 20px;
+  padding: 10px;
 }
 button{
   background-color: var(--blue);
